Continuous error in the terminal when right clicking on buttons #52466

Closed
opened 2017-08-20 18:50:48 +02:00 by Marco · 8 comments
Member

System Information
OS: Ubuntu 16.04.3 (64bit)

Blender Version
Broken: 2.79 Release Candidate 2 (blender-2.79-rc2-linux-glibc219-x86_64)

Short description of error
When right clicking on some buttons, the write appears: "search for unknown menutype WM_MT_button_context" in the terminal

Screen.png

**System Information** OS: Ubuntu 16.04.3 (64bit) **Blender Version** Broken: 2.79 Release Candidate 2 (blender-2.79-rc2-linux-glibc219-x86_64) **Short description of error** When right clicking on some buttons, the write appears: "search for unknown menutype WM_MT_button_context" in the terminal ![Screen.png](https://archive.blender.org/developer/F719637/Screen.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @nacioss

Added subscriber: @nacioss

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

The issue is caused by the D2612.
This is the second report mentioning it after blender/blender-addons#52350.
Is there a way of disabling that warning since it will spam the console every time the right click menu is accessed ?
It just adds noise to the tracker too. :)

The issue is caused by the [D2612](https://archive.blender.org/developer/D2612). This is the second report mentioning it after blender/blender-addons#52350. Is there a way of disabling that warning since it will spam the console every time the right click menu is accessed ? It just adds noise to the tracker too. :)
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions
Thomas Beck self-assigned this 2017-08-22 20:58:55 +02:00
Member

@VukGardasevic I'll fix it in a sec. That has been caused by my commit, so I'll take care of it...

@VukGardasevic I'll fix it in a sec. That has been caused by my commit, so I'll take care of it...

This issue was referenced by 980a8646d8

This issue was referenced by 980a8646d8d3b711da89794883294d6f90565f9c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52466
No description provided.